

                              KijiSchema Release Notes

Version 1.1.3
  * SCHEMA-396. HBase KijiTable readers and writers can now receive table layout updates by
      subscribing to a LayoutConsumer list managed by the table.  Registered readers and writers
      will recreate their layout dependent state in response to a table layout update.

Version 1.1.2
  * SCHEMA-358. Adds a withTable(TableLayoutDesc) method to
      InstanceBuilder.TableBuilder.
  * SCHEMA-475. Include support for profiling. Use the enable-profiling.sh
      script to switch to profiling-enabled KijiSchema (and KijiMR) jars.
  * SCHEMA-462. Include support for CDH 4.3.
  * SCHEMA-258. Fix: HBaseKijiTable.getRegions() closes the underlying HTable.
  * SCHEMA-415. KijiRandomRowFilter and KijiFirstKeyOnlyColumnFilter
  * SCHEMA-467. Fix: Upgrade checkin notification thread may hang.
  * SCHEMA-466. Fall back to $HADOOP_HOME/lib/native/ for native libraries.
      Correctly detect native libraries in CDH 4.2 and CDH 4.3 packaging.
  * SCHEMA-465. Fix: Can't create 256 regions on a table with 1 byte hash prefix
  * SCHEMA-459. Improve performance of ColumnId translation.
  * SCHEMA-456. HashedEntityId should throw an exception when getting
      row key components.

Version 1.1.1
  * SCHEMA-455. Add CellByteSizeAsValueFilter for computing table sizes.
  * SCHEMA-445. Fixes a bug in the DataRequest adapter that causes requests
      with mixed paging and non-paging columns to discard all values from all
      columns in a row, causing IOException while decoding the cells later on.
  * SCHEMA-139. Correctly close Kiji instances if an exception occurs during
      construction.
  * SCHEMA-332. Add basic maven archetype for KijiSchema-based user projects.
  * SCHEMA-439. Properly close HTable connections in HBaseKijiBufferedWriter.
  * SCHEMA-433. Kiji ls now defaults to listing Kiji instances if no argument
      is given.