@@ -3,6 +3,8 @@
                               KijiSchema Release Notes
 
 Version 1.1.3
+  * SCHEMA-469. Fix: VersionInfo should recognize backward-compatibility requirements for
+      instance versions.
   * SCHEMA-396. HBase KijiTable readers and writers can now receive table layout updates by
       subscribing to a LayoutConsumer list managed by the table.  Registered readers and writers
       will recreate their layout dependent state in response to a table layout update.
